parser needs tests, automata: need to export/save a image version